unpackaged/main/default/objects/Training_Subscription__c/Training_Subscription__c.object-meta.xml
<CustomObject>
    <label>Training Subscription</label>
    <nameField>
        <label>Training Subscription Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Training Subscriptions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>