unpackaged/main/default/objects/Training_Subscription__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Training Subscriptions</relationshipLabel>
    <relationshipName>Annuals_Training_Subscriptions_DIE</relationshipName>
    <type>Lookup</type>
</CustomField>