unpackaged/main/default/objects/Training_Subscription__c/fields/Inactive_Subscriptions__c.field-meta.xml
<CustomField>
    <fullName>Inactive_Subscriptions__c</fullName>
    <label>Inactive Subscriptions</label>
    <summaryForeignKey>Training_Subscription_Term__c.Training_Subscription__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>