unpackaged/main/default/objects/Training_Subscription__c/fields/Plan__c.field-meta.xml
<CustomField>
    <fullName>Plan__c</fullName>
    <label>Plan</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Basic</fullName>
            </value>
            <value>
                <fullName>Master</fullName>
            </value>
            <value>
                <fullName>Fixed Ops</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>