unpackaged/main/default/objects/Training_Subscription__c/fields/Subscription_Accounts__c.field-meta.xml
<CustomField>
    <fullName>Subscription_Accounts__c</fullName>
    <label>Subscription Accounts</label>
    <summarizedField>Training_Subscription_Term__c.Subscription_Accounts__c</summarizedField>
    <summaryForeignKey>Training_Subscription_Term__c.Training_Subscription__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>