unpackaged/main/default/objects/Training_Subscription__c/fields/Subscription_Number__c.field-meta.xml
<CustomField>
    <fullName>Subscription_Number__c</fullName>
    <displayFormat>{DD}{MM}{0000}</displayFormat>
    <label>Subscription Number</label>
    <type>AutoNumber</type>
</CustomField>