unpackaged/main/default/objects/Training_Subscription__c/fields/Training_Subscription_Code__c.field-meta.xml
<CustomField>
    <fullName>Training_Subscription_Code__c</fullName>
    <displayFormat>TS-{000000}</displayFormat>
    <label>Contract #</label>
    <type>AutoNumber</type>
</CustomField>