unpackaged/main/default/objects/Training_Subscription__c/fields/Training_Subscription_ID__c.field-meta.xml
<CustomField>
    <fullName>Training_Subscription_ID__c</fullName>
    <formula>CASESAFEID( Id )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Training Subscription (ID)</label>
    <type>Text</type>
</CustomField>