unpackaged/main/default/objects/Training_Subscription__c/fields/TrainingSubscriptionID_18__c.field-meta.xml
<CustomField>
    <fullName>TrainingSubscriptionID_18__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TrainingSubscriptionID (18)</label>
    <type>Text</type>
</CustomField>