unpackaged/main/default/objects/Training_Subscription__c/fields/X20_Group__c.field-meta.xml
<CustomField>
    <fullName>X20_Group__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>20 Group</label>
    <referenceTo>Twenty_Groups__c</referenceTo>
    <relationshipLabel>Training Subscriptions</relationshipLabel>
    <relationshipName>Training_Subscriptions</relationshipName>
    <type>Lookup</type>
</CustomField>