unpackaged/main/default/objects/Training_Subscription__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Active_Subscriptions__c</columns>
    <columns>Account__c</columns>
    <columns>Contact__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>greaterThan</operation>
        <value>12/1/2023 12:00 AM</value>
    </filters>
    <label>All</label>
</ListView>